--- a/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
@@ -7,10 +7,10 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Купить коммерческую", "commerce", "sale")
+        @Html.ActionLink("Снять участок", "homestead", "rent")
     </div>
 </div>
-<div class="h2novostroy"><h2>Продажа коммерческой в Одессе</h2></div>
+<div class="h2novostroy"><h2>Аренда участков в Одессе</h2></div>
 
 @Html.Partial("Advert/_filters", Model)
 
@@ -22,7 +22,7 @@
     @foreach (var category in Model.Categories)
     {
         <div class="rooms">
-            <a href="~/sale/commerce/@category.Id">@category.RussianName</a>
+            <a href="~/rent/homestead/@category.Id">@category.RussianName</a>
         </div>
     }
 
