--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -17,10 +17,20 @@
                 }                
                 <a href="#" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                 <div class="min-content">
-                    <h3>Продам @item.Title.RussianName.ToLower()</h3>
-                    <h4>@item.Description</h4>
-                    <p class="cost">@item.Price $</p>
-                    <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                    @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
+                    {
+                        <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                        <h4>@item.Description</h4>
+                        <p class="cost">@item.Price $</p>
+                        <a href="~/sale/detail/@item.Id" id="follow">❯</a>
+                    }
+                    else
+                    {
+                        <h3>Сдам @item.Title.RussianName.ToLower()</h3>
+                        <h4>@item.Description</h4>
+                        <p class="cost">@item.Price $</p>
+                        <a href="~/rent/detail/@item.Id" id="follow">❯</a>
+                    }
                 </div>
             </li>
         </div>
