--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -1,10 +1,10 @@
-﻿@model ReHouse.FrontEnd.Models.LoadNewBuildingModel
-
+﻿@using ReHouse.Utils.Helpers
+@model ReHouse.FrontEnd.Models.LoadNewBuildingModel
 @section scripts {
     <!-- Min Slider -->
     @Scripts.Render("~/bundles/slides");
     <script>
-        $(function () {
+        $(function() {
             $('#products').slides({
                 preload: true,
                 preloadImage: '',
@@ -17,17 +17,15 @@
             });
         });
     </script>
-
     <!--  FancyBox -->
-@Scripts.Render("~/bundles/fancybox");
-<script type="text/javascript">
-            $(document).ready(function() {
+    @Scripts.Render("~/bundles/fancybox");
+    <script>
+        $(document).ready(function() {
             $("a.plan").fancybox();
             // $("a.plan").fancybox({"frameWidth":1560,"frameHeight":1340});
-            });
-</script>
+        });
+    </script>
 }
-
 <div class="navigation_string">
     <div class="way">
         @Html.ActionLink("Главная", "index", "home")
@@ -44,10 +42,9 @@
 <div class="h2novostroy">
     <h2>@Model.NewBuilding.Name</h2>
     <div class="favorite">
-        <a href="#" id="favorite">Добавить в избранное</a>
-    </div> 
+        <a onclick="addtocart(@Model.NewBuilding.Id, '@AdvertsType.NewBuilding', true);" id="favorite">Добавить в избранное</a>
+    </div>
 </div>
-
 <div id="products_example">
     <div id="products">
         <div class="slides_container">
@@ -62,7 +59,6 @@
         </ul>
     </div>
 </div>
-
 <div class="table_of_prod">
     <table>
         <tr>
@@ -151,24 +147,19 @@
         </tr>
     </table>
 </div>
-
 <div class="planirovka">
     <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
     <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
     <a class="plan" rel="group" title="Планировка" href="~/Content/images/plan1.jpg"><img src="~/Content/images/plan1.jpg" border="0" /></a>
     <a class="plan" rel="group" title="Планировка" href="~/Content/images/1.jpg"><img src="~/Content/images/1.jpg" border="0" /></a>
 </div>
-
 <div class="video-youtube">
     <iframe width="711" height="533" @*@Model.NewBuilding.YouTubeUrl*@ src="https://www.youtube.com/embed/pP9YV_P6WsM" frameborder="0" allowfullscreen></iframe>
 </div>
-
 <div id="mapnovostroy_prod">
     <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d101681.05935008111!2d30.6809567124572!3d46.42350678371972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0L7QtNC10YHRgdCwINC20LXQvNGH0YPQttC40L3Riw!5e0!3m2!1sru!2sua!4v1485299309010" width="1065px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
-
 <div class="h2novostroy"><h2>Другие Новостройки</h2></div>
-
 <div class="othernovostroy">
     <ul class="prods" id="data-container">
         @if (Model.OtherNewBuildings.Count > 0)
@@ -184,6 +175,7 @@
                             <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                             <p class="cost">от @item.Price грн/м²</p>
                             <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                            <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true);">&#10084;</a>
                         </div>
                     </li>
                 </div>
@@ -191,4 +183,3 @@
         }
     </ul>
 </div>
-
