--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="feedback">
-                        <a href="#" id="fav">Список желаний</a>
+                        <a href="~/cart/index" id="fav">Список желаний</a>
                         <a href="feedback.html" id="blink">Обратный звонок</a>
                     </div>
 
@@ -255,7 +255,7 @@
         </div>
     </div>
     @RenderSection("scripts", required: false)
-
+    @Scripts.Render("~/bundles/addtocart")
     @Scripts.Render("~/bundles/unob")
     @Scripts.Render("~/Scripts/foundation")
     @Scripts.Render("~/Scripts/vendorJs")
