--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                             <p class="cost">@item.Price $</p>
                             <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                         }
-                        <a onclick="addtocart(@item.Id, '@item.Type', true);">&#10084;</a>
+                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
@@ -71,7 +71,7 @@
                         <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                         <p class="cost">от @item.Price грн/м²</p>
                         <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true);">&#10084;</a>
+                        <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
@@ -92,7 +92,7 @@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@item.Type', true);">&#10084;</a>
+                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
@@ -114,7 +114,7 @@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@item.Type', true);">&#10084;</a>
+                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
