--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -31,7 +31,7 @@
                         <p class="cost">@item.Price $</p>
                         <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                     }
-                    <a onclick="addtocart(@item.Id, '@item.Type', true);">&#10084;</a>
+                    <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                 </div>
             </li>
         </div>
