--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -15,7 +15,7 @@
                     <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                     <p class="cost">от @item.Price грн/м²</p>
                     <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
-                    <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true);">&#10084;</a>
+                    <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);">&#10084;</a>
                 </div>
             </li>
         </div>
