--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -96,7 +96,7 @@
                 </div>
                 <div class="social">
                     <a href="#" class="fb"></a>
-                    <a href="#" class="tw"></a>
+                    <a href="#" class="yt"></a>
                     <a href="#" class="gmail"></a>
                     <a href="#" class="vk"></a>
                 </div>
@@ -183,15 +183,15 @@
             <div id="toTop"></div>
             <div class="social">
                 <a href="#" class="fb"></a>
-                <a href="#" class="tw"></a>
+                <a href="#" class="yt"></a>
                 <a href="#" class="gmail"></a>
                 <a href="#" class="vk"></a>
             </div>
             <div class="bottomnav">
-                <a href="#" class="">Новости</a>
+                <a href="~/news/index" class="">Новости</a>
                 <a href="#" class="">Контакты</a>
-                <a href="#" class="">Карта сайта</a>
-                <a href="#" class="">Отзывы</a>
+                <a href="~/map/index" class="">Карта сайта</a>
+                <a href="~/feedback/index" class="">Отзывы</a>
                 <a href="#" class="">Правила</a>
             </div>
         </div>
