--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 <script type="text/javascript">
     jQuery(document).ready(function () {
         jQuery('.d-carousel .carousel').jcarousel({
-            scroll: 1
+            scroll: 1,
         });
     });
 </script>
@@ -35,7 +35,8 @@
                 <li>
                     <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                     <a class="fix" href="#"><img src="~/Content/images/prod1.jpg" alt="" /></a>
-                    <div class="min-content">                        
+                    <div class="min-content">
+                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>                        
                         @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
                         {
                             <h3>Продам @item.Title.RussianName.ToLower()</h3>
@@ -49,8 +50,7 @@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price $</p>
                             <a href="~/rent/detail/@item.Id" id="follow">❯</a>
-                        }
-                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
+                        }                        
                     </div>
                 </li>
             }
@@ -67,11 +67,11 @@
                 <li>
                     <a class="fix" href="#"><img src="~/Content/images/prod1.jpg" alt="" /></a>
                     <div class="min-content">
+                        <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div> 
                         <h3>@item.Name</h3>
                         <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                         <p class="cost">от @item.Price грн/м²</p>
-                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);">&#10084;</a>
+                        <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>                        
                     </div>
                 </li>
             }
@@ -88,11 +88,11 @@
                 <li>
                     <a class="fix" href="#"><img src="~/Content/images/prod1.jpg" alt="" /></a>
                     <div class="min-content">
+                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div> 
                         <h3>Продам @item.Title.RussianName.ToLower()</h3>
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
@@ -110,11 +110,11 @@
                 <li>
                     <a class="fix" href="#"><img src="~/Content/images/prod1.jpg" alt="" /></a>
                     <div class="min-content">
+                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                         <h3>Продам @item.Title.RussianName.ToLower()</h3>
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
-                        <a onclick="addtocart(@item.Id, '@item.Type', true, this);">&#10084;</a>
                     </div>
                 </li>
             }
@@ -127,7 +127,7 @@
     <h2>Новости</h2>
     <div class="firstnews">
         <div class="img">
-            <img src="~/Content/images/news1.jpg">
+            <img src="~/Content/images/news1.jpg" width="440" height="263">
         </div>
         <div class="content1">
             <h3>Шикарные апартаменты в центре города</h3>
@@ -138,7 +138,7 @@
     </div>
     <div class="secondnews">
         <div class="img">
-            <img src="~/Content/images/news2.jpg">
+            <img src="~/Content/images/news2.jpg" width="440" height="263">
         </div>
         <div class="content2">
             <h3>Обвал цен</h3>
@@ -149,7 +149,7 @@
     </div>
 
     <div class="morenews">
-        <a href="#" id="more">Все новости</a>
+        <a href="~/news/index" id="more">Все новости</a>
     </div>
 </div>
 
