--- a/ReHouse.FrontEnd/Views/Shared/Cart/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Cart/_listOfAdverts.cshtml
@@ -17,6 +17,7 @@
                 }                
                 <a href="#" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                 <div class="min-content">
+                    <div class="liked" onclick="addtocart(@item.Id, '@item.Type', false, this);"></div>
                     @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
                     {
                         <h3>Продам @item.Name.ToLower()</h3>
@@ -38,7 +39,6 @@
                         <p class="cost">@item.Price $</p>
                         <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                     }
-                    <a onclick="addtocart(@item.Id, '@item.Type', false, this);">&#10084;</a>
                 </div>
             </li>
         </div>
