--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -11,11 +11,11 @@
                 <div class="redimg"><img src="~/Content/images/newred.png"></div>
                 <a href="#" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                 <div class="min-content">
+                    <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
                     <h3>@item.Name</h3>
                     <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
                     <p class="cost">от @item.Price грн/м²</p>
-                    <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
-                    <a onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);">&#10084;</a>
+                    <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>                    
                 </div>
             </li>
         </div>
