--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -185,7 +185,7 @@
                         {
                             <div class="redimg"><img src="~/Content/images/newred.png"></div>
                         }
-                        <a href="#" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
+                        <a href="~/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                             <h3>Продам @item.Title.RussianName.ToLower()</h3>
